# custom-ai-code-editor

./: srs.md
ai-code-editor/: .gitignore  CHANGELOG.md  FEATURES.md  INSTALL_BUILD_TOOLS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  fix-rust-path.bat  generate-icons.ps1  index.html  install-rust.bat  package.json
ai-code-editor/src/: App.tsx  styles.css
ai-code-editor/src-tauri/: Cargo.toml  tauri.conf.json
ai-code-editor/src-tauri/src/: main.rs
ai-code-editor/src/components/: ChatPanel.tsx  FileExplorer.tsx  MonacoEditor.tsx  NotificationSystem.tsx  SettingsPanel.tsx  StatusBar.tsx  Terminal.tsx  WelcomeScreen.tsx
ai-code-editor/src/services/: OllamaService.ts
